--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/CryptocurrencyApp/CryptocurrencyClient/issues"
   },
-  "homepage": "https://github.com/CryptocurrencyApp/CryptocurrencyClient#readme"
+  "homepage": "https://github.com/CryptocurrencyApp/CryptocurrencyClient#readme",
+  "dependencies": {
+    "json-server": "^0.12.1"
+  }
 }
