--- a/package.json
+++ b/package.json
@@ -2,21 +2,47 @@
   "name": "cryptocurrencyclient",
   "version": "0.0.1",
   "description": "クライアント",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "author": "Ionic Framework",
+  "homepage": "https://github.com/CryptocurrencyApp/CryptocurrencyClient#readme",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/CryptocurrencyApp/CryptocurrencyClient.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/CryptocurrencyApp/CryptocurrencyClient/issues"
   },
-  "homepage": "https://github.com/CryptocurrencyApp/CryptocurrencyClient#readme",
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
   "dependencies": {
-    "json-server": "^0.12.1"
-  }
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/core": "4.4.0",
+    "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/status-bar": "4.4.0",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
+    "ionicons": "3.0.0",
+    "json-server": "^0.12.1",
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.1.8",
+    "typescript": "2.4.2"
+  },
+  "main": "index.js",
+  "license": "ISC"
 }
