Mockサーバーの保存の前に処理を挟むように変更
middleware.jsを使って/assetsにPUTリクエストが来た場合にprice_jpyプロパティを追加するように変更
同時に、npm run mockでMockサーバーを起動できるようにスクリプトを追加

Co-authored-by: seriousfuzzy <seriousfuzzy1211@gmail.com>
Co-authored-by: billmbowling3 <billmbowling3@gmail.com>

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "mock": "json-server mock/mock-server.json --watch --middlewares mock/middlware.js"
   },
   "dependencies": {
     "@angular/common": "5.0.3",
