コイン管理画面、コイン登録処理の実装 #3
画面に合わせてmockサーバーの方に若干の処理の修正を行った。

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "cryptocurrency-client",
+  "name": "coin-pocket-client",
   "app_id": "",
   "type": "ionic-angular",
   "integrations": {
