--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ionic-native/in-app-browser": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "cordova-plugin-inappbrowser": "^2.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
