--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,6 @@
 {
-  "name": "coin-pocket-client",
+  "name": "cryptocurrency-client",
   "app_id": "",
   "type": "ionic-angular",
-  "integrations": {
-    "cordova": {}
-  }
+  "integrations": {}
 }
