--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
-    "mock": "json-server mock/mock-server.json --watch --middlewares mock/middlware.js"
+    "mock": "json-server mock/mock-server.json --watch --middlewares mock/middlware.js --routes mock/routes.json"
   },
   "dependencies": {
     "@angular/common": "5.0.3",
