--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "json-server": "^0.12.1",
+    "jssha": "^2.3.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
